tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_9.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  r := ((1223 + (1223 + (p + y))) < (1223 - (1 + (- 2))));
               q := r;
               x := (2 - (((z * 200) MOD 1223) - 1223));
               r := q;
               r := (((+ (+ 0)) - 2) = 2);
               z := (z DIV (z - (- 200)));
               q := (~ p);
               z := x;
               y := (+ (200 + (+ z)));
               q := q
END Test11.